--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/carousel": "^7.16.3",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "embla-carousel-react": "^7.1.0",
@@ -23,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
