--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/carousel": "^7.16.3",
     "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.17.2",
     "@mantine/hooks": "^7.16.3",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
